infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lensfinder
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: lensfinder.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 3001
